manifests/web/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
      - name: oauth-secrets
        secret:
          secretName: oauth2
          items:
          - key: spooky-oauth.json
            path: client-secret.json
      - name: google-cloud-secrets
        secret:
          secretName: google-service-account
          items:
          - key: spooky-svc-account.json
            path: app-credentials.json
      containers:
      - name: web
        image: gcr.io/spookystore-18/github-m-okeefe-spookystore-web:08a3587045fed8dc15ca415464105290c5f5e58a
        imagePullPolicy: IfNotPresent # minikube-only
        args:
        - "-addr=:8000"
        - "-google-project-id=$(GOOGLE_PROJECT_ID)"
        - "-google-oauth2-config=/etc/secrets/oauth/client-secret.json"
        - "-user-directory-addr=$(USER_SVC_ADDR)"
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: USER_SVC_ADDR
          valueFrom:
            configMapKeyRef:
              name: hosts
              key: userdirectory
        - name: oauth-secrets
          mountPath: /etc/secrets/oauth
          readOnly: true
        - name: google-cloud-secrets
          mountPath: /etc/secrets/google
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            memory: 256Mi
        livenessProbe:
          initialDelaySeconds: 10
          tcpSocket:
            port: 8000
