manifests/web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-local
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - port: 8000
    nodePort: 32000
