manifests/web/network-policy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: frontend-allow
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress:
  - from: []
